@@ -10,6 +10,8 @@
 -Added text.isInteger()
 -Added map.GPSTrack
 -Added geometry.LineString
+-Support null tzQhr
+-Added math.Vector3
 
 1.2.1
 -Merge Individual class js into namespace js
